# opper-sdks

./: .gitignore  BASE_CLIENT_SPEC.md  CAPABILITIES.md  CLAUDE.md  README.md  openapi.yaml
python/: CHANGELOG.md  MIGRATION.md  README.md  SPEC.md  pyproject.toml
python/docs_code_snippets/: call-stream.py  call.py  embeddings-create.py  functions-call.py  functions-create.py  functions-delete.py  functions-get.py  functions-list.py  functions-revisions-list.py  functions-stream.py  functions-update.py  knowledge-add.py  knowledge-create.py  knowledge-delete-documents.py  knowledge-delete.py  knowledge-files-list.py  knowledge-get-by-name.py  knowledge-list.py  knowledge-query.py  knowledge-upload.py  models-list.py  quickstart-audio.py  quickstart-chat.py  quickstart-embeddings.py  quickstart-image.py  quickstart-streaming.py  quickstart-structured.py  quickstart-text.py  quickstart-tools.py  run_all.py  spans-create.py  spans-delete.py  spans-get.py  spans-update.py  traces-get.py  traces-list.py
python/examples/: run_all.py
python/examples/agents/: 00_first_agent.py  01_agent_with_schema.py  02_agent_with_tools.py  03_streaming.py  04_hooks_logging.py  05_hooks_timing.py  06_streaming_hooks.py  07_agent_as_tool.py  08_multi_agent.py  (+2 more)
python/tests/: conftest.py  test_agent_bugs.py  test_agent_error_visibility.py  test_agent_mcp.py  test_agent_tracing.py  test_base_client.py  test_client.py  test_embeddings.py  test_errors.py  test_from_dict.py  test_functions.py  test_generations.py  test_knowledge.py  test_models.py  test_schema.py  test_spans.py  test_system.py  test_traces.py  test_web_tools.py
(+244 files in other folders)
