[project]
name = "opperai"
version = "2.0.0b7"
description = "Python SDK for the Opper Task API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2",
]
dev = [
    "pydantic>=2",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opperai"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mcp>=1.27.0",
]
